Change Dockerfile to apply configuration

--- a/DMZ/SOA-externe/Dockerfile
+++ b/DMZ/SOA-externe/Dockerfile
@@ -6,3 +6,5 @@ RUN apt update && apt upgrade -y
 # Installer bind et autres programme utile
 RUN apt install bind9 bind9utils dnsutils net-tools iputils-ping -y
 
+COPY named.conf /etc/bind
+COPY l2-2.ephec-ti.be /etc/bind
