--- a/DMZ/SOA-externe/named.conf
+++ b/DMZ/SOA-externe/named.conf
@@ -32,5 +32,5 @@ options {
 
 zone "l2-2.ephec-ti.be" {
     type master;
-    file "/etc/bind/zones/db.l2-2.ephec-ti.be";
+    file "/etc/bind/l2-2.ephec-ti.be";
 };
