--- a/DMZ/SOA-externe/named.conf
+++ b/DMZ/SOA-externe/named.conf
@@ -1,36 +1,8 @@
-options {
-	directory "/var/cache/bind";
 
-	// If there is a firewall between you and nameservers you want
-	// to talk to, you may need to fix the firewall to allow multiple
-	// ports to talk.  See http://www.kb.cert.org/vuls/id/800113
+# contient l'ensemble des options de configuration du serveur DNS. 
+include "/etc/bind/named.conf.options";
 
-	// If your ISP provided one or more IP addresses for stable 
-	// nameservers, you probably want to use them as forwarders.  
-	// Uncomment the following block, and insert the addresses replacing 
-	// the all-0's placeholder.
+# contient la configuration du serveur DNS, et c'est ici que vous déclarez les zones associées au domaine.
+include "/etc/bind/named.conf.local";
 
-	// forwarders {
-	// 	0.0.0.0;
-	// };
 
-	//========================================================================
-	// If BIND logs error messages about the root key being expired,
-	// you will need to update your keys.  See https://www.isc.org/bind-keys
-	//========================================================================
-	dnssec-validation auto;
-
-	querylog yes;
-
-	listen-on { any; };
-	allow-query { any; };
-
-	listen-on-v6 { any; };
-    recursion no;
-    allow-transfer { none; };
-};
-
-zone "l2-2.ephec-ti.be" {
-    type master;
-    file "/etc/bind/l2-2.ephec-ti.be";
-};
