Add RRs for web/mail/voip

--- a/DMZ/SOA-externe/Dockerfile
+++ b/DMZ/SOA-externe/Dockerfile
@@ -1,5 +1,5 @@
 # image à partir d'ubuntu 20.04
-FROM ubuntu:focal
+FROM bind9:9.18
 
 # Mettre à jour tous les packets
 RUN apt update && apt upgrade -y
@@ -10,10 +10,6 @@ COPY named.conf /etc/bind
 COPY named.conf.local /etc/bind
 COPY named.conf.options /etc/bind
 COPY db.l2-2.ephec-ti.be /etc/bind
-
-#Ouverture du port 53 en UDP/TCP
-EXPOSE 53/udp
-EXPOSE 53/tcp
 
 # lancer la config bind
 CMD named -g
