Configuration site b2b en static

--- a/Web-public/Dockerfile
+++ b/Web-public/Dockerfile
@@ -5,21 +5,20 @@ RUN apt update -y && apt upgrade -y
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 
 # Copie des fichiers à implémenter dans le container docker "web".
-COPY config/l1-5.ephec-ti.be.conf /etc/apache2/sites-available
-COPY config/b2b.l1-5.ephec-ti.be.conf /etc/apache2/sites-available
-COPY config/intranet.l1-5.ephec-ti.be.conf /etc/apache2/sites-available
+COPY config/l2-2.ephec-ti.be.conf /etc/apache2/sites-available
+COPY config/b2b.l2-2.ephec-ti.be.conf /etc/apache2/sites-available
+COPY config/intranet.l2-2.ephec-ti.be.conf /etc/apache2/sites-available
 
 # lien entre sites-available et sitesenabled
-RUN ln -s /etc/apache2/sites-available/l1-5.ephec-ti.be.conf /etc/apache2/sites-enabled
-RUN ln -s /etc/apache2/sites-available/b2b.l1-5.ephec-ti.be.conf /etc/apache2/sites-enabled
-RUN ln -s /etc/apache2/sites-available/intranet.l1-5.ephec-ti.be.conf /etc/apache2/sites-enabled
+RUN ln -s /etc/apache2/sites-available/l2-2.ephec-ti.be.conf /etc/apache2/sites-enabled
+RUN ln -s /etc/apache2/sites-available/b2b.l2-2.ephec-ti.be.conf /etc/apache2/sites-enabled
+RUN ln -s /etc/apache2/sites-available/intranet.l2-2.ephec-ti.be.conf /etc/apache2/sites-enabled
 
 # Création des répertoire dans le container
-RUN mkdir /var/www/b2b.l1-5.ephec-ti.be
-RUN mkdir /var/www/l1-5.ephec-ti.be
-RUN mkdir /var/www/intranet.l1-5.ephec-ti.be
+RUN mkdir /var/www/b2b.l2-2.ephec-ti.be
+RUN mkdir /var/www/l2-2.ephec-ti.be
+
 
 # copier des fichier à affihcer contenant les pages web
-COPY /www/index.html /var/www/html/index.html
-COPY /www/b2b/index.php /var/www/html/b2b.l1-5.ephec-ti.be/index.php
-COPY /www/interne/index.html /var/www/html/intranet.l1-5.ephec-ti.be/index.html
+COPY /www/public/index.html /var/www/html/index.html
+COPY /www/b2b/index.php /var/www/html/b2b.l2-2.ephec-ti.be/index.php
