--- a/DMZ/Web-public/config/l2-2.ephec-ti.be.conf
+++ b/DMZ/Web-public/config/l2-2.ephec-ti.be.conf
@@ -4,7 +4,7 @@
 	#Nom du serveur
 	ServerName www.l2-2.ephec-ti.be
 	DocumentRoot /var/www/html/
-	<Directory "/var/www/html/">
+	#<Directory "/var/www/html/">
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log              
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
