--- a/DMZ/Web-public/config/b2b.l2-2.ephec-ti.be.conf
+++ b/DMZ/Web-public/config/b2b.l2-2.ephec-ti.be.conf
@@ -4,7 +4,7 @@
 	#Nom du serveur
 	ServerName b2b.l2-2.ephec-ti.be
 	DocumentRoot /var/www/html/b2b.l2-2.ephec-ti.be/
-	<Directory "/var/www/html/b2b.l2-2.ephec-ti.be/">
+	#<Directory "/var/www/html/b2b.l2-2.ephec-ti.be/">
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log              
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
