--- a/VOIP/config/sip.conf
+++ b/VOIP/config/sip.conf
@@ -77,17 +77,17 @@ localnet=192.168.2.0/255.255.255.0
 ;-------------------------------------------------------
 ;user configuration
 
-[50]
+[1]
 type=friend
 host=dynamic
 fullname=secretariat
 username=secretariat
 context=secretariat
-secret="x~jB/*kda5g/)&=
+secret=x~jB/*kda5g/)&=
 callerid="secretariat"
 ;mailbox= ----------
 
-[100]
+[2]
 type=friend
 host=dynamic
 fullname=directeur
@@ -97,7 +97,7 @@ secret=q!mQN$qk#$F#%8.L
 callerid="directeur"
 ;mailbox= ----------
 
-[150]
+[3]
 type=friend
 host=dynamic
 fullname=comptabilite
@@ -107,7 +107,7 @@ secret=y!@DaP-pZn;7xU!R
 callerid="comptabilite"
 ;mailbox= ----------
 
-[200]
+[4]
 type=friend
 host=dynamic
 fullname=atelier
@@ -117,6 +117,26 @@ secret=J/P-9Umg]np^?MBX
 callerid="atelier"
 ;mailbox= ----------
 
+[5]
+type=friend
+host=dynamic
+fullname=commerciaux
+username=commerciaux
+context=commerciaux
+secret=:Sd3xPc]4h]TQ25(
+callerid="commerciaux"
+;mailbox= ----------
+
+
+[5]
+type=friend
+host=dynamic
+fullname=hangar
+username=hangar
+context=hangar
+secret=E3.V.62_enh-FH2p
+callerid="hangar"
+;mailbox= ----------
 
 
 
