--- a/DMZ/database/Dockerfile
+++ b/DMZ/database/Dockerfile
@@ -4,6 +4,8 @@
 
 From mysql:latest
 
+EXPOSE 3306
+
 # installation des package
 RUN apt update && apt-get upgrade -y
 RUN apt-get install nano -y
@@ -12,3 +14,4 @@ RUN apt-get install nano -y
 WORKDIR /etc/
 
 COPY ./config/ /docker-entrypoint-initdb.d/
+
