refactor folders place

--- a/DMZ/Mail/Dockerfile
+++ b/DMZ/Mail/Dockerfile
@@ -2,4 +2,7 @@ FROM ubuntu:focal
 
 RUN apt update && apt upgrade -y
 # install postfix
-RUN apt install postfix vim -y
+RUN apt install postfix dovecot vim net-tools mailutils mutt telnet -y
+
+EXPOSE 25
+EXPOSE 143
