--- a/DMZ/Web-public/config/b2b.l2-2.ephec-ti.be.conf
+++ b/DMZ/Web-public/config/b2b.l2-2.ephec-ti.be.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:443>
 	#Adresse mail de l'administrateur
 	ServerAdmin he201558@students.ephec.be
 	#Nom du serveur
@@ -8,4 +8,7 @@
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log              
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+    SSLEngine on
+  	SSLCertificateFile /etc/apache2/certificate/apache-certificate.crt
+    SSLCertificateKeyFile /etc/apache2/certificate/apache.key
 </VirtualHost>
