--- a/DMZ/Web-public/Dockerfile
+++ b/DMZ/Web-public/Dockerfile
@@ -4,7 +4,8 @@ FROM php:7.2-apache
 RUN apt update -y && apt upgrade -y
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 RUN apt install openssl
-RUN openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes -keyout /etc/apache2/certificate/apache.key -out /etc/apache2/certificate/apache-certificate.crt -subj "/C=BE/ST=Braban-wallon/L=Louvain-La-Neuve/O=Ephec/OU=IT/CN=www.l2-1.ephec-ti.be"
+RUN mkdir /etc/certificate
+RUN openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes -keyout /etc/certificate/apache.key -out /etc/certificate/apache-certificate.crt -subj "/C=BE/ST=Braban-wallon/L=Louvain-La-Neuve/O=Ephec/OU=IT/CN=www.l2-1.ephec-ti.be"
 
 # Copie des fichiers à implémenter dans le container docker "web".
 COPY config/l2-2.ephec-ti.be.conf /etc/apache2/sites-available
@@ -25,5 +26,7 @@ COPY /www/b2b/index.php /var/www/html/b2b.l2-2.ephec-ti.be/index.php
 
 # SSL
 RUN a2enmod ssl
+RUN a2enmod headers
+RUN a2ensite ssl
 RUN a2enmod rewrite
 RUN service apache2 restart
