--- a/DMZ/Web-public/config/www.l2-2.ephec-ti.be.conf
+++ b/DMZ/Web-public/config/www.l2-2.ephec-ti.be.conf
@@ -2,8 +2,8 @@
 	#Adresse mail de l'administrateur
 	ServerAdmin he201558@students.ephec.be
 	#Nom du serveur
-	ServerName b2b.l2-2.ephec-ti.be
-	Redirect permanent / https://b2b.l2-2.ephec-ti.be
+	ServerName www.l2-2.ephec-ti.be
+	Redirect permanent / https://www.l2-2.ephec-ti.be
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log              
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
@@ -13,7 +13,7 @@
 	#Adresse mail de l'administrateur
 	ServerAdmin he201558@students.ephec.be
 	#Nom du serveur
-	ServerName b2b.l2-2.ephec-ti.be
+	ServerName www.l2-2.ephec-ti.be
 	DocumentRoot /var/www/html/
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log              
