--- a/DMZ/Web-public/config/www.l2-2.ephec-ti.be.conf
+++ b/DMZ/Web-public/config/www.l2-2.ephec-ti.be.conf
@@ -20,6 +20,6 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	
 	SSLEngine on
-	SSLCertificateFile /etc/ssl/certs/apache.crt
-	SSLCertificateKeyFile /etc/ssl/certs/apache.key
+	SSLCertificateFile /etc/ssl/certs/www.crt
+	SSLCertificateKeyFile /etc/ssl/certs/www.key
 </VirtualHost>
