--- a/DMZ/Web-public/config/b2b.l2-2.ephec-ti.be.conf
+++ b/DMZ/Web-public/config/b2b.l2-2.ephec-ti.be.conf
@@ -14,7 +14,7 @@
 	ServerAdmin he201558@students.ephec.be
 	#Nom du serveur
 	ServerName b2b.l2-2.ephec-ti.be
-	DocumentRoot /var/www/html/
+	DocumentRoot /var/www/b2b.l2-2.ephec-ti.be/
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log              
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
