debug conf voip

--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -14,8 +14,6 @@
 ; - With the "dialplan reload" command in the CLI
 ; - With the "reload" command (that reloads everything) in the CLI
 
-; --- Configuring each post ---
-
 ; --- secretariat ---
 [secretariat]
 exten => 50,1,Answer
@@ -31,6 +29,8 @@ same => n,Hangup
 exten => 100,1,Goto(directeur,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 200,1,Goto(atelier,${EXTEN},1)
+exten => 300,1,Goto(hangar,${EXTEN},1)
+exten => 250,1,Goto(commerciaux,${EXTEN},1)
 
 ; --- directeur ---
 [directeur]
@@ -47,6 +47,8 @@ same => n,Hangup
 exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 200,1,Goto(atelier,${EXTEN},1)
+exten => 300,1,Goto(hangar,${EXTEN},1)
+exten => 250,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- comptabilite ---
@@ -55,7 +57,7 @@ exten => 150,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@comptabilitevm)
 same => n,Hangup
-
+;relir cdc + faire une queue(contable 1,2)
 ; comptabilite access voicemail
 exten => *150,1,VoiceMailMain(150@comptabilitevm)      ;checkvoicemail
 same => n,Hangup
@@ -64,6 +66,8 @@ same => n,Hangup
 exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 100,1,Goto(directeur,${EXTEN},1)
 exten => 200,1,Goto(atelier,${EXTEN},1)
+exten => 300,1,Goto(hangar,${EXTEN},1)
+exten => 250,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- atelier ---
@@ -81,3 +85,40 @@ same => n,Hangup
 exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 100,1,Goto(directeur,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
+exten => 300,1,Goto(hangar,${EXTEN},1)
+exten => 250,1,Goto(commerciaux,${EXTEN},1)
+
+
+; --- hangar ---
+[hangar]
+exten => 200,1,Answer
+same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
+same => n,VoiceMail(${EXTEN}@hangarvm)
+same => n,Hangup
+
+; atelier access voicemail
+exten => *200,1,VoiceMailMain(200@hangarvm)      ;checkvoicemail
+same => n,Hangup
+
+;allow other extensions
+exten => 50,1,Goto(secretariat,${EXTEN},1)
+exten => 100,1,Goto(directeur,${EXTEN},1)
+exten => 150,1,Goto(comptabilite,${EXTEN},1)
+exten => 250,1,Goto(commerciaux,${EXTEN},1)
+
+; --- commerciaux ---
+[commerciaux]
+exten => 200,1,Answer
+same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
+same => n,VoiceMail(${EXTEN}@commerciauxvm)
+same => n,Hangup
+
+; atelier access voicemail
+exten => *200,1,VoiceMailMain(200@commerciauxvm)      ;checkvoicemail
+same => n,Hangup
+
+;allow other extensions
+exten => 50,1,Goto(secretariat,${EXTEN},1)
+exten => 100,1,Goto(directeur,${EXTEN},1)
+exten => 150,1,Goto(comptabilite,${EXTEN},1)
+exten => 300,1,Goto(hangar,${EXTEN},1)
