--- a/DMZ/VOIP/config/sip.conf
+++ b/DMZ/VOIP/config/sip.conf
@@ -1,9 +1,3 @@
-;source : https://leblogdolivyeahh.wordpress.com/2020/08/12/debian-10-voip-voix-sur-ip-partie-2-configuration-et-tests/
-; https://doc.ubuntu-fr.org/asterisk
-; https://wiki.asterisk.org/wiki/display/AST/Configuring+Voice+Mail+Boxes
-; https://www.voip-info.org/asterisk-config-sipconf/
-; https://www.voip-info.org/asterisk-sip-nat/
-
 
 [general] 
 ;bindport = Number : UDP Port to bind to (listen on). Used to be port in Asterisk v1.0.x. Default 5060.
@@ -52,12 +46,9 @@ dtmfmode=rdc2833
 ;-------------------------------------------------------
 ; netowrk configuration
 ;externip = IP_Address or a hostname : Address that we’re going to put in SIP messages if we’re behind a NAT. If a hostname is used as the value, then the IP address associated with the hostname is looked up only once during the reading of the sip.conf. If you want support for a hostname associated with a dynamic IP address, use externhost.
-externip=135.125.101.238
+externip=176.96.231.179
 
 ;attempted brufe force fix
-deny=0.0.0.0/0.0.0.0
-deny=0.0.0.0/255.255.255.255
-permit=172.17.0.0/255.255.255.0
 allowguest=no
 
 
@@ -72,63 +63,63 @@ qualify=yes
 nat=yes
 
 ;localnet = NetAddress/Netmask : local network and mask.
-localnet=192.168.2.0/255.255.255.0
+localnet=192.168.0.0/255.255.255.0
 
 ;-------------------------------------------------------
 ;user configuration
 
-[1]
+[50]
 type=friend
 host=dynamic
 fullname=secretariat
 username=secretariat
 context=secretariat
-secret=x~jB/*kda5g/)&=
+secret=ebM$dVj5&jsg
 callerid="secretariat"
 ;mailbox= ----------
 
-[2]
+[100]
 type=friend
 host=dynamic
 fullname=directeur
 username=directeur
 context=direction
-secret=q!mQN$qk#$F#%8.L
+secret=iTonTAtERViC
 callerid="directeur"
 ;mailbox= ----------
 
-[3]
+[150]
 type=friend
 host=dynamic
 fullname=comptabilite
 username=comptabilite
 context=comptabilite
-secret=y!@DaP-pZn;7xU!R
+secret=AFkFapKWahck
 callerid="comptabilite"
 ;mailbox= ----------
 
-[4]
+[200]
 type=friend
 host=dynamic
 fullname=atelier
 username=atelier
 context=atelier
-secret=J/P-9Umg]np^?MBX
+secret=dKsQnnqDzRKS
 callerid="atelier"
 ;mailbox= ----------
 
-[5]
+[250]
 type=friend
 host=dynamic
 fullname=commerciaux
 username=commerciaux
 context=commerciaux
-secret=:Sd3xPc]4h]TQ25(
+secret=:Sd3xPc4hTQ25
 callerid="commerciaux"
 ;mailbox= ----------
 
 
-[5]
+[300]
 type=friend
 host=dynamic
 fullname=hangar
