--- a/DMZ/VOIP/config/voicemail.conf
+++ b/DMZ/VOIP/config/voicemail.conf
@@ -25,3 +25,9 @@ maxlogins=3     ;This setting defines the number of retries a user has to enter 
 
 [ateliervm]
 300 => [atelier],atelier
+
+[hangarvm]
+400 => [hangar],hangar
+
+[commerciauxvm]
+500 => [commerciaux],commerciaux
