--- a/DMZ/VOIP/config/sip.conf
+++ b/DMZ/VOIP/config/sip.conf
@@ -68,7 +68,7 @@ localnet=192.168.0.0/255.255.255.0
 ;-------------------------------------------------------
 ;user configuration
 
-[50]
+[secretariat]
 type=friend
 host=dynamic
 fullname=secretariat
@@ -78,7 +78,7 @@ secret=ebM$dVj5&jsg
 callerid="secretariat"
 ;mailbox= ----------
 
-[100]
+[directeur]
 type=friend
 host=dynamic
 fullname=directeur
@@ -88,7 +88,7 @@ secret=iTonTAtERViC
 callerid="directeur"
 ;mailbox= ----------
 
-[150]
+[comptabilite]
 type=friend
 host=dynamic
 fullname=comptabilite
@@ -98,7 +98,7 @@ secret=AFkFapKWahck
 callerid="comptabilite"
 ;mailbox= ----------
 
-[200]
+[atelier]
 type=friend
 host=dynamic
 fullname=atelier
@@ -108,7 +108,7 @@ secret=dKsQnnqDzRKS
 callerid="atelier"
 ;mailbox= ----------
 
-[250]
+[commerciaux]
 type=friend
 host=dynamic
 fullname=commerciaux
@@ -119,7 +119,7 @@ callerid="commerciaux"
 ;mailbox= ----------
 
 
-[300]
+[hangar]
 type=friend
 host=dynamic
 fullname=hangar
