changement du port par défault aisnsi que mise a jour des numero correspondant

--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -15,8 +15,8 @@
 ; - With the "reload" command (that reloads everything) in the CLI
 
 ; --- secretariat ---
-[secretariat]
-exten => 50,1,Answer
+[7000]
+exten => 7000,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@secretariatvm)
 same => n,Hangup
@@ -26,15 +26,15 @@ exten => *50,1,VoiceMailMain(50@secretariatvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 100,1,Goto(directeur,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 200,1,Goto(atelier,${EXTEN},1)
-exten => 300,1,Goto(hangar,${EXTEN},1)
-exten => 250,1,Goto(commerciaux,${EXTEN},1)
+exten => 7001,1,Goto(directeur,${EXTEN},1)
+exten => 7002,1,Goto(comptabilite,${EXTEN},1)
+exten => 7003,1,Goto(atelier,${EXTEN},1)
+exten => 7005,1,Goto(hangar,${EXTEN},1)
+exten => 7004,1,Goto(commerciaux,${EXTEN},1)
 
 ; --- directeur ---
-[directeur]
-exten => 100,1,Answer
+[7001]
+exten => 7001,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@directeurvm)
 same => n,Hangup
@@ -44,81 +44,80 @@ exten => *100,1,VoiceMailMain(100@directeurvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 200,1,Goto(atelier,${EXTEN},1)
-exten => 300,1,Goto(hangar,${EXTEN},1)
-exten => 250,1,Goto(commerciaux,${EXTEN},1)
+exten => 7000,1,Goto(secretariat,${EXTEN},1)
+exten => 7002,1,Goto(comptabilite,${EXTEN},1)
+exten => 7003,1,Goto(atelier,${EXTEN},1)
+exten => 7005,1,Goto(hangar,${EXTEN},1)
+exten => 7004,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- comptabilite ---
-[comptabilite]
-exten => 150,1,Answer
+[7002]
+exten => 7002,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@comptabilitevm)
 same => n,Hangup
 ;relir cdc + faire une queue(contable 1,2)
 ; comptabilite access voicemail
-exten => *150,1,VoiceMailMain(150@comptabilitevm)      ;checkvoicemail
+exten => *7002,1,VoiceMailMain(150@comptabilitevm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 100,1,Goto(directeur,${EXTEN},1)
-exten => 200,1,Goto(atelier,${EXTEN},1)
-exten => 300,1,Goto(hangar,${EXTEN},1)
-exten => 250,1,Goto(commerciaux,${EXTEN},1)
+exten => 7000,1,Goto(secretariat,${EXTEN},1)
+exten => 7001,1,Goto(directeur,${EXTEN},1)
+exten => 7003,1,Goto(atelier,${EXTEN},1)
+exten => 7005,1,Goto(hangar,${EXTEN},1)
+exten => 7004,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- atelier ---
-[atelier]
-exten => 200,1,Answer
+[7003]
+exten => 7003,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@ateliervm)
 same => n,Hangup
 
 ; atelier access voicemail
-exten => *200,1,VoiceMailMain(200@ateliervm)      ;checkvoicemail
+exten => *7003,1,VoiceMailMain(200@ateliervm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 100,1,Goto(directeur,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 300,1,Goto(hangar,${EXTEN},1)
-exten => 250,1,Goto(commerciaux,${EXTEN},1)
-
-
-; --- hangar ---
-[hangar]
-exten => 200,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@hangarvm)
-same => n,Hangup
-
-; atelier access voicemail
-exten => *200,1,VoiceMailMain(200@hangarvm)      ;checkvoicemail
-same => n,Hangup
-
-;allow other extensions
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 100,1,Goto(directeur,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 250,1,Goto(commerciaux,${EXTEN},1)
+exten => 7000,1,Goto(secretariat,${EXTEN},1)
+exten => 7001,1,Goto(directeur,${EXTEN},1)
+exten => 7002,1,Goto(comptabilite,${EXTEN},1)
+exten => 7005,1,Goto(hangar,${EXTEN},1)
+exten => 7004,1,Goto(commerciaux,${EXTEN},1)
 
 ; --- commerciaux ---
-[commerciaux]
-exten => 200,1,Answer
+[7004]
+exten => 7003,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@commerciauxvm)
 same => n,Hangup
 
-; atelier access voicemail
-exten => *200,1,VoiceMailMain(200@commerciauxvm)      ;checkvoicemail
+; commerciaux access voicemail
+exten => *7004,1,VoiceMailMain(200@commerciauxvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 100,1,Goto(directeur,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 300,1,Goto(hangar,${EXTEN},1)
+exten => 7000,1,Goto(secretariat,${EXTEN},1)
+exten => 7001,1,Goto(directeur,${EXTEN},1)
+exten => 7002,1,Goto(comptabilite,${EXTEN},1)
+exten => 7005,1,Goto(hangar,${EXTEN},1)
+
+; --- hangar ---
+[7005]
+exten => 7003,1,Answer
+same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
+same => n,VoiceMail(${EXTEN}@hangarvm)
+same => n,Hangup
+
+; hangar access voicemail
+exten => *7005,1,VoiceMailMain(200@hangarvm)      ;checkvoicemail
+same => n,Hangup
+
+;allow other extensions
+exten => 7000,1,Goto(secretariat,${EXTEN},1)
+exten => 7001,1,Goto(directeur,${EXTEN},1)
+exten => 7002,1,Goto(comptabilite,${EXTEN},1)
+exten => 7004,1,Goto(commerciaux,${EXTEN},1)
