gros changement sur sip.conf

--- a/DMZ/VOIP/config/sip.conf
+++ b/DMZ/VOIP/config/sip.conf
@@ -1,84 +1,66 @@
-
+# - language = Langage utilisé pour fonction Playback()/Background(). 
+# - bindport = Assigne un port UDP sur lequel écouter.
+# - allow = Autorise l'utilisation de codec spécifiques.
+# - hasvoicemail = Définit si l'utilisateur possède une boite vocale.
+# - callwaiting = Met en place une attente d'appel pour les clients sip non disponibles.
+# - hassip, sip = Les client SIP utilise le protocole sip.
+# - dtmfmode = définit code dtmf.
+# - externip = Adresse où nous allons transmettre les messages sip lorsque nous utilisons la NAT.
+# - localnet = Définit un réseau local et un masque.
+# - tcpenable = Active/Désactive tcp pour les communications.
+# - tcpbindaddr = définit une adresse lors de l'utilisation de tcp.
+# - transport = Définit un protocole de transport des communications SIP.
+# - srvlookup = Active les recherches avec le Resource Record SRV pour les appels.
+# - nat = Définit la méthode d'utilisation d'asterisk lors de communications entre connexions comprenant des pares-feux.
+# - force_rport = active RFC 3581 et désactive l'utilisation RTP symétrique (voir = voip-info.org/asterisk-sip-nat/).
+# - qualify = Permet de pouvoir disposer d'informations concernant la connectivités et s'assurer du bon fonctionnement des clients sip 
+# (par exemple lors de l'utilisation de la commande :  sip show peers ).
 [general] 
-;bindport = Number : UDP Port to bind to (listen on). Used to be port in Asterisk v1.0.x. Default 5060.
-bindport=5830
-nat=force_rport
-
-
-;srvlookup = Enable DNS SRV lookups on outbound calls 
-;Disabling DNS SRV lookups disables the ability to place SIP calls based on domain names to some other SIP users on the Internet
-srvlookup=yes
-
-
-;disallow = First disallow all codecs
-disallow=all
-
-; Allow Allow codecs in order of preference
-allow=ulaw
-allow=alaw
-
-;allowoverlap =yes|no : Enable/disable overlap dialing support. Default yes (Overlap dial provides for a longer time-out period between digits, also called the inter-digit timer. With overlap dial set to off, the gateway expects to receive the digits one right after the other coming in to this line with very little delay between digits. With overlap dial set to on, then the device waits up to about 2 seconds between digits).
-allowoverlap=no
-
-;hasvoicemail = self explanatory
-hasvoicemail=yes
-
-;callwaiting= ability to put have double calls
-callwaiting=yes
-threewaycalling=yes
-
-hassip=yes
-hasiax=no
-
-;language = <string> : Default language used by any Playback()/Background().
 language=fr
-
-;trustrpid = yes|no : If Remote-Party-ID SIP header should be trusted. Default no.
-trustrpid = yes 
-
-;sendrpid = yes|no : If a Remote-Party-ID SIP header should be sent. Default no.
-sendrpid = yes  
-
-callreturn=yes
-transfer=yes
-dtmfmode=rdc2833
-
-;-------------------------------------------------------
-; netowrk configuration
-;externip = IP_Address or a hostname : Address that we’re going to put in SIP messages if we’re behind a NAT. If a hostname is used as the value, then the IP address associated with the hostname is looked up only once during the reading of the sip.conf. If you want support for a hostname associated with a dynamic IP address, use externhost.
+bindport=5060
+allow=alaw
+allow=ulaw
+allowoverlap=no
+hasvoicemail=yes
+callwaiting=yes
+hassip=yes
+sip=yes
+dtmfmode=rfc2833
 externip=176.96.231.179
-
-;attempted brufe force fix
-allowguest=no
-
-
+localnet=192.168.0.0/255.255.255.0 
 tcpenable=no
 tcpbindaddr=0.0.0.0
 transport=udp
-
-;qualify = yes|no|milliseconds : Check if client is reachable. If yes, the checks occur every 60 seconds. Default no.
+srvlookup=yes
+nat=force_rport
 qualify=yes
-
-;nat = yes|no : Please note that as of Asterisk 1.0.x nat can now have the values: yes|no|never|route. Default no which really means to use rfc3581 techniques.
-nat=yes
-
-;localnet = NetAddress/Netmask : local network and mask.
-localnet=192.168.0.0/255.255.255.0
-
 ;-------------------------------------------------------
+
 ;user configuration
+# - Identifiants extensions champs : 
+# - username = Définit un nom d'utilisateur pour le client SIP 
+# - context = Définit le contexte d'extension utilisé.
+# - type = Definit le type de client SIP utilisé.
+# peer -> Utilisé pour recevoir les appels uniquement.
+# user -> Utilisé pour effectuer des appels uniquement.
+# friend -> Utilisé comme peer et user, donc peut appeller et recevoir des appels.
+# - secret = Définit un mot de passe à utiliser pour s'enregistrer au client SIP.
+# - host = Définit l'adresse IP utilisé par le client SIP.
+# host = dynamic -> permet de ne pas utiliser un adresse ip fixe et d'utiliser l'adresse IP de l'appereil qui se connecte au client SIP.
+# host = [ip] -> permet de définir une adresse IP fixe du client SIP.
+# - callerid = Définit un identifiant du client SIP. 
 
 [7000]
+username=secretariat
+fullname=secretariat
+context=secretariat
 type=friend
 host=dynamic
-fullname=secretariat
-username=secretariat
-context=secretariat
-secret=ebM$dVj5&jsg
-callerid="secretariat"
+secret=MOGymPtOrKhA
+callerid= "secretariat" <7000>
 ;mailbox= ----------
 
-[7001]
+[7010]
 type=friend
 host=dynamic
 fullname=directeur
@@ -88,7 +70,7 @@ secret=iTonTAtERViC
 callerid="directeur"
 ;mailbox= ----------
 
-[7002]
+[7020]
 type=friend
 host=dynamic
 fullname=comptabilite
@@ -98,7 +80,7 @@ secret=AFkFapKWahck
 callerid="comptabilite"
 ;mailbox= ----------
 
-[7003]
+[7050]
 type=friend
 host=dynamic
 fullname=atelier
@@ -108,24 +90,24 @@ secret=dKsQnnqDzRKS
 callerid="atelier"
 ;mailbox= ----------
 
-[7004]
+[7100]
 type=friend
 host=dynamic
 fullname=commerciaux
 username=commerciaux
 context=commerciaux
-secret=:Sd3xPc4hTQ25
+secret=GlACEntIVent
 callerid="commerciaux"
 ;mailbox= ----------
 
 
-[7005]
+[7150]
 type=friend
 host=dynamic
 fullname=hangar
 username=hangar
 context=hangar
-secret=E3.V.62_enh-FH2p
+secret=RESIOuranDER
 callerid="hangar"
 ;mailbox= ----------
 
