--- a/DMZ/VOIP/config/voicemail.conf
+++ b/DMZ/VOIP/config/voicemail.conf
@@ -15,19 +15,19 @@ sendvoicemail=yes     ;enables the “Leave a message” menu option from the Ad
 maxlogins=3     ;This setting defines the number of retries a user has to enter voicemail passwords before Asterisk will disconnect the user
 
 [secretariatvm]
-7000 => [secretariat],secretariat
+7000 => [MOGymPtOrKhA],secretariat
 
 [directeurvm]
-7001 => [directeur],directeur
+7010 => [iTonTAtERViC],directeur
 
 [comptabilitevm]
-7002 => [comptabilite],comptabilite
+7020 => [AFkFapKWahck],comptabilite
 
 [ateliervm]
-7003 => [atelier],atelier
+7050 => [dKsQnnqDzRKS],atelier
 
 [hangarvm]
-7004 => [hangar],hangar
+7100 => [GlACEntIVent],hangar
 
 [commerciauxvm]
-7005 => [commerciaux],commerciaux
+7150 => [RESIOuranDER],commerciaux
