refonte des différents fichiers sur base d'un tuto

--- a/DMZ/VOIP/Dockerfile
+++ b/DMZ/VOIP/Dockerfile
@@ -14,6 +14,7 @@ EXPOSE 19000-20000/UDP
 COPY config/sip.conf /etc/asterisk/sip.conf
 COPY config/extensions.conf /etc/asterisk/extensions.conf
 COPY config/voicemail.conf /etc/asterisk/voicemail.conf
+COPY config/users.conf /etc/asterisk/users.conf
 #Run asterisk
 ENTRYPOINT [ "/usr/sbin/asterisk", "-f" ]
 #CMD ["asterisk", "-f"]
