--- a/DMZ/VOIP/config/sip.conf
+++ b/DMZ/VOIP/config/sip.conf
@@ -1,116 +1,8 @@
-# - language = Langage utilisé pour fonction Playback()/Background(). 
-# - bindport = Assigne un port UDP sur lequel écouter.
-# - allow = Autorise l'utilisation de codec spécifiques.
-# - hasvoicemail = Définit si l'utilisateur possède une boite vocale.
-# - callwaiting = Met en place une attente d'appel pour les clients sip non disponibles.
-# - hassip, sip = Les client SIP utilise le protocole sip.
-# - dtmfmode = définit code dtmf.
-# - externip = Adresse où nous allons transmettre les messages sip lorsque nous utilisons la NAT.
-# - localnet = Définit un réseau local et un masque.
-# - tcpenable = Active/Désactive tcp pour les communications.
-# - tcpbindaddr = définit une adresse lors de l'utilisation de tcp.
-# - transport = Définit un protocole de transport des communications SIP.
-# - srvlookup = Active les recherches avec le Resource Record SRV pour les appels.
-# - nat = Définit la méthode d'utilisation d'asterisk lors de communications entre connexions comprenant des pares-feux.
-# - force_rport = active RFC 3581 et désactive l'utilisation RTP symétrique (voir = voip-info.org/asterisk-sip-nat/).
-# - qualify = Permet de pouvoir disposer d'informations concernant la connectivités et s'assurer du bon fonctionnement des clients sip 
-# (par exemple lors de l'utilisation de la commande :  sip show peers ).
-[general] 
+[general]
 language=fr
 bindport=5060
-allow=alaw
-allow=ulaw
-allowoverlap=no
-hasvoicemail=yes
-callwaiting=yes
-hassip=yes
-sip=yes
-dtmfmode=rfc2833
-externip=176.96.231.179
-localnet=192.168.0.0/255.255.255.0 
-tcpenable=no
-tcpbindaddr=0.0.0.0
-transport=udp
+bindaddr=0.0.0.0
 srvlookup=yes
-nat=force_rport
-qualify=yes
-;-------------------------------------------------------
-
-;user configuration
-# - Identifiants extensions champs : 
-# - username = Définit un nom d'utilisateur pour le client SIP 
-# - context = Définit le contexte d'extension utilisé.
-# - type = Definit le type de client SIP utilisé.
-# peer -> Utilisé pour recevoir les appels uniquement.
-# user -> Utilisé pour effectuer des appels uniquement.
-# friend -> Utilisé comme peer et user, donc peut appeller et recevoir des appels.
-# - secret = Définit un mot de passe à utiliser pour s'enregistrer au client SIP.
-# - host = Définit l'adresse IP utilisé par le client SIP.
-# host = dynamic -> permet de ne pas utiliser un adresse ip fixe et d'utiliser l'adresse IP de l'appereil qui se connecte au client SIP.
-# host = [ip] -> permet de définir une adresse IP fixe du client SIP.
-# - callerid = Définit un identifiant du client SIP. 
-
-[7000]
-username=secretariat
-fullname=secretariat
-context=secretariat
-type=friend
-host=dynamic
-secret=MOGymPtOrKhA
-callerid= "secretariat" <7000>
-;mailbox= ----------
-
-[7010]
-type=friend
-host=dynamic
-fullname=directeur
-username=directeur
-context=direction
-secret=iTonTAtERViC
-callerid="directeur"
-;mailbox= ----------
-
-[7020]
-type=friend
-host=dynamic
-fullname=comptabilite
-username=comptabilite
-context=comptabilite
-secret=AFkFapKWahck
-callerid="comptabilite"
-;mailbox= ----------
-
-[7050]
-type=friend
-host=dynamic
-fullname=atelier
-username=atelier
-context=atelier
-secret=dKsQnnqDzRKS
-callerid="atelier"
-;mailbox= ----------
-
-[7100]
-type=friend
-host=dynamic
-fullname=commerciaux
-username=commerciaux
-context=commerciaux
-secret=GlACEntIVent
-callerid="commerciaux"
-;mailbox= ----------
-
-
-[7150]
-type=friend
-host=dynamic
-fullname=hangar
-username=hangar
-context=hangar
-secret=RESIOuranDER
-callerid="hangar"
-;mailbox= ----------
-
-
-
-
+nat=force_rport,comedia
+localnet=192.168.1.0/255.255.255.0
+externip=176.96.231.179
