--- a/DMZ/VOIP/config/voicemail.conf
+++ b/DMZ/VOIP/config/voicemail.conf
@@ -6,28 +6,27 @@
 [general]
 format=wav49|gsm|wav49      ;defines the format used to store voicemail
 
-maxsilence=5      ;defines how long Asterisk will wait for a contiguous period of silence before terminating an incoming call to voice mail
-maxmessage=180     ;defines the maximum amount of time in seconds of an incoming voicemail message
-minmessageg=3      ;Limit the minimum message length to 3 seconds
-maxmsg=50     ;This limits the number of messages in a voicemail folder{default 100}
-sendvoicemail=yes     ;enables the “Leave a message” menu option from the Advanced Options menu which allows the voicemail user to send a message to another voicemail user.
-
-maxlogins=3     ;This setting defines the number of retries a user has to enter voicemail passwords before Asterisk will disconnect the user
+maxsilence=5      
+maxmessage=180     
+minmessageg=3     
+maxmsg=50     
+sendvoicemail=yes     
+maxlogins=3     
 
 [secretariatvm]
-7000 => [MOGymPtOrKhA],secretariat
+secretariat => [MOGymPtOrKhA],secretariat
 
 [directeurvm]
-7010 => [iTonTAtERViC],directeur
+directeur => [iTonTAtERViC],directeur
 
 [comptabilitevm]
-7020 => [AFkFapKWahck],comptabilite
+comptabilite => [AFkFapKWahck],comptabilite
 
 [ateliervm]
-7050 => [dKsQnnqDzRKS],atelier
+atelier => [dKsQnnqDzRKS],atelier
 
 [hangarvm]
-7100 => [GlACEntIVent],hangar
+hangar => [GlACEntIVent],hangar
 
 [commerciauxvm]
-7150 => [RESIOuranDER],commerciaux
+commerciaux => [RESIOuranDER],commerciaux
