SOA-Externe Dockerfile EXPOSE

--- a/DMZ/SOA-externe/Dockerfile
+++ b/DMZ/SOA-externe/Dockerfile
@@ -4,12 +4,17 @@ FROM ubuntu:focal
 # Mettre à jour tous les packets
 RUN apt update && apt upgrade -y
 # Installer bind et autres programme utile
-RUN apt install bind9 bind9utils dnsutils net-tools iputils-ping -y
+RUN apt install bind9 bind9utils dnsutils net-tools vim iputils-ping -y
 
 COPY named.conf /etc/bind
 COPY named.conf.local /etc/bind
 COPY named.conf.options /etc/bind
 COPY db.l2-2.ephec-ti.be /etc/bind
 
+EXPOSE 53
+EXPOSE 953
+
 # lancer la config bind
 CMD named -g
+
+
