changement de VPS

--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,4 +1,4 @@
-; --- secretariat ---
+; --- dirceteur ---
 [1]
 exten => 1,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
@@ -16,7 +16,7 @@ exten => 200,1,Goto(atelier,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
 exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
-; --- directeur ---
+; --- secretariat ---
 [50]
 exten => 50,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
